# panda_arms_ws

./: .gitignore  README.md
src/multiple_arms_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/multiple_arms_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  panda_multiple_arms.srdf
src/multiple_arms_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/panda_multiple_arms/: CMakeLists.txt  package.xml
src/panda_multiple_arms/config/: joint_state_controller.yaml  trajectory_controller.yaml
src/panda_multiple_arms/launch/: bringup_moveit.launch  controller_utils.launch  panda_multiple_arms_joint_state_controller.launch  panda_multiple_arms_trajectory_controller.launch  trajectory_controller.launch  view_panda_multiple_arms_empty_world.launch
src/panda_multiple_arms/robot_description/: panda_multiple_arms.xacro  panda_multiple_arms_make_gazebo_ready.xacro  panda_single_arm.xacro
src/panda_multiple_arms/src/: plan_simple_motion.cpp
src/panda_multiple_arms_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_multiple_arms_moveit_config/config/: fake_controllers.yaml  gazebo_panda_multiple_arms.urdf  (+8 more)
src/panda_single_arm_moveit_config/: CMakeLists.txt  package.xml
(+40 files in other folders)
